--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Demo</title>
 </head>
 <body>
-<h1> Welcomme to coursera course</h1>h1>
+<h1> Welcomme to coursera course</h1>
 </body>
 </html>
